Make object retrieval safer and more convenient
* In TCSObjectService, introduce new fetch() methods, deprecating/
  replacing the existing fetchObject() and fetchObjects(). Those new
  methods that return a single object wrap it in an Optional to ensure
  the caller is aware of the case of nonexistence.
* Introduce InternalTCSObjectService with a stream() method, allowing
  to directly acquire a stream of objects. When a large number of
  objects needs to be returned and e.g. filtered, this can be
  significantly more performant than first building a large set and
  then iterating over it.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>